--- a/thirdweb-contracts/package.json
+++ b/thirdweb-contracts/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@thirdweb-dev/contracts": "^3.8.0",
-    "zksync-web3": "^0.14.3"
+    "zksync-web3": "^0.14.3",
+    "thirdweb": "^5.37.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
