--- a/thirdweb-contracts/package.json
+++ b/thirdweb-contracts/package.json
@@ -1,9 +1,9 @@
 {
   "name": "hardhat-javascript-starter",
   "scripts": {
-    "build": "npx thirdweb@5.37.0 detect",
-    "deploy": "npx thirdweb@5.37.0 deploy",
-    "publish": "npx thirdweb@5.37.0 publish"
+    "build": "npx thirdweb@latest detect",
+    "deploy": "npx thirdweb@latest deploy",
+    "publish": "npx thirdweb@latest publish"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-solc": "^0.3.17",
@@ -12,6 +12,9 @@
   "dependencies": {
     "@thirdweb-dev/contracts": "^3.8.0",
     "dotenv": "^16.4.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "thirdweb": "^5.45.0",
     "zksync-web3": "^0.14.3"
   },
   "description": "Create a project using this examplecd :",
