--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.1",
-    "thirdweb": "^5"
+    "thirdweb": "^5",
+    "web3": "^4.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
