--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@thirdweb-dev/react": "^4.9.4",
     "react": "^18.3",
     "react-dom": "^18.3",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.1",
     "thirdweb": "^5",
     "web3": "^4.12.1"
