--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.3",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
     "react": "^18.3",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
