--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@auth-kit/react-router": "^3.1.3",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
+    "js-cookie": "^3.0.5",
     "react": "^18.3",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3",
@@ -23,6 +24,8 @@
     "web3": "^4.12.1"
   },
   "devDependencies": {
+    "@types/cookies": "^0.9.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
