--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@auth-kit/react-router": "^3.1.3",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
+    "axios": "^1.7.7",
+    "ethers": "^5.7.2",
     "js-cookie": "^3.0.5",
     "react": "^18.3",
     "react-auth-kit": "^3.1.3",
@@ -24,6 +26,7 @@
     "web3": "^4.12.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/cookies": "^0.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.56",
@@ -32,9 +35,11 @@
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^15.9.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
