--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
     "@auth-kit/react-router": "^3.1.3",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^18.3",
     "react-auth-kit": "^3.1.3",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.1",
     "thirdweb": "^5",
     "web3": "^4.12.1"
