--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
     "dayjs": "^1.11.13",
@@ -24,7 +25,8 @@
     "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.1",
     "thirdweb": "^5",
-    "web3": "^4.12.1"
+    "web3": "^4.12.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/cookies": "^0.9.0",
