--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cookies": "^0.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.2",
     "express": "^4.19.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
