--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^18.3",
