--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
     "@hookform/resolvers": "^3.9.0",
+    "@material-tailwind/react": "^2.1.10",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^4.9.4",
     "axios": "^1.7.7",
