--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@thirdweb-dev/react": "^4.9.4",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
     "js-cookie": "^3.0.5",
     "react": "^18.3",
     "react-auth-kit": "^3.1.3",
