--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 JWT_SECRET = your_secret_key
-CONTRACT_ADDRESS = 0x4eA9C780e9F3e25f62122D56B53DccC5186E01f3
+ATLAS_URI = "mongodb+srv://emailskripsicrowdfund:test1234@crowdfund.0pzxt.mongodb.net/?retryWrites=true&w=majority&appName=Crowdfund"
+PORT = 5000
