--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-number-format": "^5.4.2",
+    "react-phone-number-input": "^3.4.9",
     "react-router-dom": "^6.26.1",
     "thirdweb": "^5",
     "web3": "^4.12.1",
