--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
+    "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3",
     "react-auth-kit": "^3.1.3",
